tests/baselines/reference/parserES5ComputedPropertyName1(target=es2015).errors.txt
parserES5ComputedPropertyName1.ts(2,6): error TS2304: Cannot find name 'e'.


==== parserES5ComputedPropertyName1.ts (1 errors) ====
    declare class C {
        [e]: number 
         ~
!!! error TS2304: Cannot find name 'e'.
    }